# myOfflineAi-VoiceAssistant

./: README.md
myOfflineAi-VoiceAssistant-v1.0/: app.py  how-to-run-this-app.txt
myOfflineAi-VoiceAssistant-v1.1/: LICENSE.txt  app.py  how-to-run-this-app.txt  pyproject.toml
myOfflineAi-VoiceAssistant-v2.0/: app.py  how-to-run-this-app.txt  start-mac-app.command
myOfflineAi-VoiceAssistant-v2.1/: app.py  how-to-run-this-app.txt  pyproject.toml  start-windows-app.bat
