[project]
name = "myOfflineAi-VoiceAssistant"
version = "1.0"
description = "An offline-first Ai voice assistant."
requires-python = "==3.12.*"
dependencies = [
    "flask==3.1.2",
    "ollama==0.6.0",
    "kokoro-onnx==0.4.9",
    "soundfile==0.13.1",
    "openai-whisper==20250625",
    "pymupdf==1.26.4",
    "pillow==11.3.0",
    "requests==2.32.3",
]